# python-starter

./: README.md  pyproject.toml  run_app.sh
src/: main.py
src/helpers/: example.py
