[tool.poetry]
name = "python-starter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"

[tool.poetry.scripts]
example-fn = "python-starter:src.main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
